--- a/src/main/resources/templates/client/fragments/header.html
+++ b/src/main/resources/templates/client/fragments/header.html
@@ -77,7 +77,7 @@
                                 <th:block th:unless="${userInfo.avatar != null}">
                                     <div class="avatar me-2">
                                         <span class="avatar-initial rounded-circle bg-label-success">
-                                           <span id="avatar-name"></span>
+                                           <span class="avatar-name"></span>
                                         </span>
                                     </div>
                                 </th:block>
