--- a/src/main/resources/templates/client/blogs.html
+++ b/src/main/resources/templates/client/blogs.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
-<head th:replace="~{client/fragments/head :: heads(pageTitle='Category name?')}">
-    <title></title>
+<head th:replace="~{client/fragments/head :: heads(pageTitle='Blogs...')}">
+    <title>Blogs</title>
 </head>
 <body>
 
@@ -10,95 +10,98 @@
 
 
 <!-- Page Header Title Start -->
-<div th:replace="~{client/fragments/header_page :: header_page(headerTitle='Title post?')}"></div>
+<div th:replace="~{client/fragments/header_page :: header_page(headerTitle='Blog review')}"></div>
 <!-- Page Header Title End -->
 
-<!-- List Restaurant Start -->
+<!-- List Blog Start -->
+
 <div class="container-fluid py-5">
     <div class="container py-2">
-        <div class="card p-3">
-            <div class="card-title d-flex justify-content-center">
-                <h3>Title post?</h3>
-            </div>
-            <div class="card-content">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias amet aperiam
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias amet aperiam
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias amet aperiam
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias amet aperiam
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias amet aperiam
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias amet aperiam
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias amet aperiam
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias amet aperiam
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias amet aperiam
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias amet aperiam
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias amet aperiam
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias amet aperiam
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias amet aperiam
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias amet aperiam
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias amet aperiam
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias amet aperiam
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias amet aperiam
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias amet aperiam
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias amet aperiam
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias amet aperiam
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias amet aperiam
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias amet aperiam
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias amet aperiam
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias amet aperiam
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias amet aperiam
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias amet aperiam
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias amet aperiam
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias amet aperiam
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias amet aperiam
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias amet aperiam
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias amet aperiam
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias amet aperiam
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias amet aperiam
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias amet aperiam
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias amet aperiam
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias amet aperiam
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias amet aperiam
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias amet aperiam
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias amet aperiam
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias amet aperiam
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias amet aperiam
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias amet aperiam
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias amet aperiam
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias amet aperiam
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias amet aperiam
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias amet aperiam
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias amet aperiam
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias amet aperiam
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias amet aperiam
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias amet aperiam
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias amet aperiam
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias amet aperiam
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias amet aperiam
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias amet aperiam
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias amet aperiam
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias amet aperiam
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias amet aperiam
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias amet aperiam
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias amet aperiam
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias amet aperiam
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias amet aperiam
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias amet aperiam
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias amet aperiam
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias amet aperiam
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias amet aperiam
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias amet aperiam
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias amet aperiam
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias amet aperiam
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias amet aperiam
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias amet aperiam
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias amet aperiam
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias amet aperiam
+        <div class="row">
+            <div class="col-md-9">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="card-deck">
+                            <!-- Hiển thị các blog có chỉ số chẵn -->
+                            <div class="card p-3" th:each="blog, iterStat : ${blogs}" th:if="${iterStat.index % 2 == 0}">
+                                <div class="card-title d-flex justify-content-center">
+                                    <h3 th:text="${blog.getBlog_title()}"></h3>
+                                </div>
+                                <div class="card-content">
+                                    <div th:fragment="blog" class="col">
+                                        <div class="card h-100">
+                                            <a th:href="@{${blog.getSlug()}}">
+                                                <img class="card-img-top" th:src="@{'/' + ${blog.getBlog_img()}}" th:alt="${blog.getBlog_title()}"/>
+                                            </a>
+                                            <div class="card-body">
+                                                <a th:href="@{${blog.getSlug()}}">
+                                                    <h5 th:text="${blog.getBlog_title()}" class="card-title">Title</h5>
+                                                </a>
+                                                <p th:text="${blog.getBlog_content()}" class="card-text"> </p>
+                                            </div>
+                                        </div>
 
+                                    </div>
+                                    <a th:href="@{${'/blog/' + blog.getSlug() + '.html'}}" class="btn">Xem chi tiết >></a>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="card-deck">
+                            <!-- Hiển thị các blog có chỉ số lẻ -->
+                            <div class="card p-3" th:each="blog, iterStat : ${blogs}" th:if="${iterStat.index % 2 != 0}">
+                                <div class="card-title d-flex justify-content-center">
+                                    <h3 th:text="${blog.getBlog_title()}"></h3>
+                                </div>
+                                <div class="card-content">
+                                    <div th:fragment="blog" class="col">
+                                        <div class="card h-100">
+                                            <a th:href="@{${blog.getSlug()}}">
+                                                <img class="card-img-top" th:src="@{'/' + ${blog.getBlog_img()}}" th:alt="${blog.getBlog_title()}"/>
+                                            </a>
+                                            <div class="card-body">
+                                                <a th:href="@{${blog.getSlug()}}">
+                                                    <h5 th:text="${blog.getBlog_title()}" class="card-title">Title</h5>
+                                                </a>
+                                                <p th:text="${blog.getBlog_content()}" class="card-text"> </p>
+                                            </div>
+
+                                        </div>
+                                        <a th:href="@{${'/blog/' + blog.getSlug() + '.html'}}" class="btn">Xem chi tiết >></a>
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
+
+            <div class="col-md-3">
+                <form class="d-flex mb-3">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+                <div class="card" th:each="blog : ${blogs}">
+                    <div class="card-body d-flex">
+                        <a th:href="@{${'/blog/' + blog.getSlug() + '.html'}}">
+                            <img class="card-img-top align-self-start" th:src="@{'/' + ${blog.getBlog_img()}}" th:alt="${blog.getBlog_title()}" style="width: 100px; height: auto;"/>
+                        </a>
+                        <div class="flex-grow-1 ms-3">
+                            <h5 class="card-title">
+                                <a th:href="@{${'/blog/' + blog.getSlug() + '.html'}}" th:text="${blog.getBlog_title()}"></a>
+                            </h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </div>
 </div>
-<!-- List Restaurant End -->
+<!-- List Blog End -->
 
 <!-- Footer Start -->
 
